# fiber-rs

./: .gitignore  .gitmodules  .taplo.toml  Cargo.toml  LICENSE  README.md  _build.rs  build.rs
.github/workflows/: lint-actions.yml  lint.yml  unit-test.yml
src/: api.rs  client.rs  dispatcher.rs  eth.rs  filter.rs  lib.rs  types.rs  utils.rs
tests/: backfill.sh  decode.rs  mod.rs  test.rs
tests/blocks/: block8424647.ssz  block8424648.ssz
