[package]
name = "fiber"
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Chainbound <admin@chainbound.io>"]

[dependencies]
# alloy
alloy = { version = "0.8.3", features = [
    "ssz",
    "rlp",
    "eips",
    "k256",
    "consensus",
    "rpc-types",
    "rpc-types-engine",
] }
alloy-rlp = "0.3.10"

# ethereum
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
ethereum_ssz = "0.8.1"

# serialization
serde = { version = "1.0", features = ["derive", "rc"] }
base64 = "0.13.1"
serde_json = "1.0"
serde_repr = "0.1"
hex = "0.4.3"

# grpc
tonic = { version = "0.10", features = ["gzip", "prost"] }
prost = "0.12"

# runtime
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
async-stream = "0.3"
pin-project = "1"

# metrics
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.10"
