[package]
name = "fiber"
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Chainbound <admin@chainbound.io>"]

[dependencies]
# alloy
alloy = { version = "0.8.3", features = [
    "ssz",
    "rlp",
    "eips",
    "k256",
    "consensus",
    "rpc-types",
    "rpc-types-engine",
] }

# ethereum
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
ethereum_ssz = "0.8.1"

# grpc
tonic = { version = "0.10", features = ["gzip", "prost"] }
prost = "0.12"

# runtime
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# metrics
tracing = "0.1"

# extra
thiserror = "2.0.9"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.10"
