[package]
name = "fiber"
version = "0.8.1"
edition = "2021"
license = "MIT"
authors = ["Chainbound <admin@chainbound.io>"]
rust-version = "1.82"

[dependencies]
# ethereum
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "ba43147" }
ethereum_ssz = "0.9.0"
alloy = { version = "0.15", features = [
    "ssz",
    "rlp",
    "eips",
    "k256",
    "consensus",
    "rpc-types",
    "rpc-types-engine",
] }

# grpc
tonic = { version = "0.13", features = ["gzip", "prost"] }
prost = "0.13"

# runtime
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# extra
tracing = "0.1"
thiserror = "2.0.12"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.13"
